src/components/common/AlbumCard/AlbumCard.module.scss
.albumContainer {
  width: 270px;
  height: 342px;
  overflow: hidden;
  border: 1px solid $sub-color1;
  border-radius: 8px;
  background-color: $primary-white;
  cursor: pointer;

  .albumContent {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 34px 10px 33px 20px;

    .albumTitle {
      @include typo(14, "bold");
    }
  }
}

.imageBox {
  height: 258px;
  padding: 32px 31px 21px;
  background-color: $sub-color1;

  .imageContent {
    display: flex;
    position: relative;
    align-items: center;
    justify-content: center;
    height: 100%;
    overflow: hidden;
    border-radius: 8px;
    background-color: $primary-white;

    .albumCover {
      object-fit: cover;
      object-position: center;
    }

    .default {
      position: static !important;
      width: 65px !important;
      height: 115px !important;
    }
  }
}

